--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,7 @@
-  @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100;300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
+@import url('./skeleton.css');
+@import url('./bulma.css');
+@import url('./component.css');
 
-
-html {
-  font-family: 'Roboto', Sans-Serif;
-  scroll-behavior: smooth;
-  transition: 0.3s;
-}
-div.is-normal h1 {
-  line-height: 10px;
-}
-div.fleksibel {
-  padding-left: 5%;
-  padding-right: 5%;
-  justify-content: space-between;
-}
-input {
-  width: 78% !important;
-}
-span#errorMsg, span#errorText {
-  font-family: Monospace;
-}
-a.donate {
-  font-family: Monospace;
-  color:#000;
-  opacity: 1;
-  text-decoration: underline;
-  font-size: 14px;
-}
-.tags {
-  margin:2px;
-}
-.delete {
-  opacity: 0.5 !important;
-  padding-top:2px;
-}
-button {
-  transition: 0.3s;
-}
-button.fetchLink {
-  width: 30%;
-}
-button.disabled {
-  color: #fff;
-  background: #333;
-}
-button:focus, button:active {
-background: #eee !important;
-color: #000 !important;
-}
 textarea {
-  border-radius: 10px;
-  border: 1px solid #000 !important;
-  resize: none !important;
+  resize: none;
 }
-.kaki {
-  text-align: center;
-  font-size:15px;
-  bottom: 10px;
-}
-
-.fileInfo {
-  display: grid;
-  justify-content: center;
-  grid-template-columns: (1,1fr);
-  text-align: center;
-  margin: 10px 0 1.5em 0;
-}
-.fileNameInfo {
-  display: block;
-}
-#fileName {
-  font-weight: 600;
-  font-size: 18px;
-}
-#fileSize {
-  font-weight: 400;
-  font-size: 16px;
-}
-#fileThumb {
-  max-width: 70vw;
-  height: auto;
-}
-
