--- a/css/component.css
+++ b/css/component.css
@@ -72,3 +72,9 @@ span.fileSize {
   text-align: center;
   font-family: Monospace;
 }
+
+img.thumb {
+  width:100%;
+height:100%;
+object-fit:cover;
+}
